--- a/tests/Untitled.ipynb
+++ b/tests/Untitled.ipynb
@@ -2,13 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 117,
    "id": "f51af2bb-4966-4af7-b832-accb255d84f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import GPUtil"
+    "import GPUtil\n",
+    "from queue import Queue"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "55f0ab0e-8cb7-48a4-a5f7-a3eb0da27b2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = Queue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "21d3a01e-5c1b-443c-86fd-20d65f742d59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q.put(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "cbf61b77-8311-4b58-a3e8-4d9c12dddb66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in q.queue:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41fef478-6541-4696-9dab-f6a580b8d85b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
